--- a/index.html
+++ b/index.html
@@ -16,81 +16,50 @@
       background: #0d1117; 
       color: #c9d1d9; 
       line-height: 1.5; 
-      font-size: 1em; /* Keep font size the same as before */
+      font-size: 1em; /* Keep font size the same */
     }
-    .top-menu { 
-      background: #0d1117; 
-      border-bottom: 1px solid #30363d; 
-      padding: 10px 20px; 
-      display: flex; 
-      gap: 20px; 
-      align-items: center; 
+    .main-title { 
+      text-align: center; 
+      color: #58a6ff; 
+      margin: 20px 0 5px; 
+      font-size: 2.5em; 
+      font-weight: 700; 
+    }
+    .subtitle { 
+      text-align: center; 
+      color: #8b949e; 
+      margin-bottom: 15px; 
       font-size: 1.1em; 
     }
-    .menu-item { 
-      color: #58a6ff; 
-      cursor: pointer; 
-      transition: color 0.2s; 
-    }
-    .menu-item:hover { color: white; }
-    .main-container { 
-      display: grid; 
-      grid-template-columns: 1fr 250px; 
-      grid-template-rows: auto 150px; 
-      gap: 15px; 
+    .container { 
+      display: flex; 
+      flex-wrap: wrap; 
+      gap: 20px; 
       max-width: 1400px; 
       margin: 0 auto; 
-      padding: 15px; 
+      padding: 0 15px; 
     }
-    .chart-main { 
-      grid-column: 1 / 2; 
-      grid-row: 1 / 2; 
-      height: 400px; 
+    .chart-area { 
+      flex: 3; 
+      min-width: 600px; 
+      height: 600px; 
       background: #161b22; 
-      border-radius: 8px; 
+      border-radius: 12px; 
       padding: 15px; 
       box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
     }
     .sidebar { 
-      grid-column: 2 / 3; 
-      grid-row: 1 / 3; 
+      flex: 1; 
+      min-width: 300px; 
       background: #161b22; 
       padding: 15px; 
-      border-radius: 8px; 
+      border-radius: 12px; 
       box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
       overflow-y: auto; 
+      max-height: 600px; 
     }
-    .bottom-panels { 
-      grid-column: 1 / 2; 
-      grid-row: 2 / 3; 
-      display: flex; 
-      gap: 15px; 
-    }
-    .panel { 
-      flex: 1; 
-      background: #161b22; 
-      padding: 15px; 
-      border-radius: 8px; 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
-      min-height: 100px; 
-    }
-    .tab-bar { 
-      display: flex; 
-      gap: 10px; 
-      margin-bottom: 10px; 
-    }
-    .tab { 
-      background: #21262d; 
-      padding: 8px 15px; 
-      border-radius: 6px; 
-      cursor: pointer; 
-      transition: all 0.2s; 
-    }
-    .tab.active { background: #58a6ff; color: white; }
-    .tab:hover { background: #30363d; }
-    .panel-content { min-height: 50px; }
     .status-badge { 
-      font-size: 1.8em; 
+      font-size: 2em; 
       margin: 0 0 15px; 
       padding: 10px; 
       border-radius: 8px; 
@@ -119,8 +88,8 @@
     #actionAdvice { background: #2c0e0e; color: #ff6b6b; }
     #previousCalls { background: #161b22; border: 1px solid #30363d; }
     #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
-    #confidenceGauge { width: 150px; height: 150px; margin: 15px auto; }
-    .phase-bar { height: 30px; width: 100%; margin: 0 0 10px 0; border-radius: 8px; overflow: hidden; display: flex; box-shadow: 0 3px 15px rgba(0,0,0,0.5); }
+    #confidenceGauge { width: 150px; height: 150px; margin: 20px auto; }
+    .phase-bar { height: 30px; width: 100%; margin: 0 0 15px 0; border-radius: 8px; overflow: hidden; display: flex; box-shadow: 0 3px 15px rgba(0,0,0,0.5); }
     .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; }
     .loading { color: #8b949e; text-align: center; margin: 15px 0; font-style: italic; }
     .collapsible-section { margin: 10px 0; }
@@ -128,14 +97,16 @@
     .collapsible-content { display: none; padding: 8px; background: #161b22; border-radius: 0 0 6px 6px; }
     .open .collapsible-content { display: block; }
     .drawing-toolbar { 
+      position: absolute; 
+      left: 10px; 
+      top: 50px; 
       background: #21262d; 
       border-radius: 8px; 
-      padding: 10px; 
+      padding: 10px 5px; 
       box-shadow: 0 4px 15px rgba(0,0,0,0.5); 
       display: flex; 
       flex-direction: column; 
       gap: 10px; 
-      align-items: center; 
     }
     .tool-icon { 
       cursor: pointer; 
@@ -146,54 +117,55 @@
     }
     .tool-icon.active { background: #58a6ff; color: white; }
     .tool-icon:hover { background: #30363d; }
-    @media (max-width: 900px) { .container { grid-template-columns: 1fr; } .drawing-toolbar { grid-column: 1 / 2; grid-row: 1 / 2; position: absolute; left: 10px; top: 60px; } .sidebar { order: 3; } .chart-main { order: 1; grid-column: 1 / 4; } .bottom-panels { order: 2; grid-column: 1 / 4; flex-direction: column; } }
+    .phase-toggle { 
+      background: #21262d; 
+      color: #c9d1d9; 
+      border: 1px solid #30363d; 
+      padding: 10px 15px; 
+      border-radius: 8px; 
+      cursor: pointer; 
+      margin-bottom: 15px; 
+      transition: all 0.2s; 
+    }
+    .phase-toggle.active { background: #58a6ff; color: white; border-color: #58a6ff; }
+    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
 <body>
-  <div class="top-menu">
-    <div class="menu-item">Trading</div>
-    <div class="menu-item">Darkles</div>
-    <div class="menu-item">Markle</div>
-    <div class="menu-item">Hotlis</div>
-    <div class="menu-item">Warrlis</div>
-    <div class="menu-item">Secd</div>
-    <div class="menu-item">Markets</div>
-  </div>
+  <h1 class="main-title">Flow Cycle Index Dashboard</h1>
+  <p class="subtitle">One clean line tracks market flows — from bottoms to blow-offs</p>
 
-  <div class="main-container">
-    <div class="drawing-toolbar">
-      <div class="tool-icon" data-tool="crosshair" title="Crosshair">+ </div>
-      <div class="tool-icon" data-tool="line" title="Line"> - </div>
-      <div class="tool-icon" data-tool="horizontal" title="Horizontal Line"> = </div>
-      <div class="tool-icon" data-tool="trend" title="Trend Line"> / </div>
-      <div class="tool-icon" data-tool="fib" title="Fib Retracement"> F </div>
-      <div class="tool-icon" data-tool="rectangle" title="Rectangle"> [] </div>
-      <div class="tool-icon" data-tool="text" title="Text"> T </div>
-      <div class="tool-icon" data-tool="magnet" title="Magnet Snap"> M </div>
-      <div class="tool-icon" data-tool="lock" title="Lock Editing"> L </div>
-      <div class="tool-icon" data-tool="hide" title="Hide Drawings"> H </div>
-      <div class="tool-icon" data-tool="trash" title="Clear All"> 🗑 </div>
-    </div>
-    <div class="chart-main">
+  <div class="container">
+    <div class="chart-area">
+      <div class="drawing-toolbar">
+        <div class="tool-icon" data-tool="crosshair" title="Crosshair"> + </div>
+        <div class="tool-icon" data-tool="line" title="Line"> - </div>
+        <div class="tool-icon" data-tool="horizontal" title="Horizontal Line"> = </div>
+        <div class="tool-icon" data-tool="trend" title="Trend Line"> / </div>
+        <div class="tool-icon" data-tool="fib" title="Fib Retracement"> F </div>
+        <div class="tool-icon" data-tool="rectangle" title="Rectangle"> [] </div>
+        <div class="tool-icon" data-tool="text" title="Text"> T </div>
+        <div class="tool-icon" data-tool="magnet" title="Magnet Snap"> M </div>
+        <div class="tool-icon" data-tool="lock" title="Lock Editing"> L </div>
+        <div class="tool-icon" data-tool="hide" title="Hide Drawings"> H </div>
+        <div class="tool-icon" data-tool="trash" title="Clear All"> 🗑 </div>
+      </div>
       <canvas id="myChart"></canvas>
+      <button class="phase-toggle" id="togglePhaseBar">Toggle Phase Bar (On)</button>
     </div>
-    <div class="order-book">
-      <h3>Order Book</h3>
-      <p>Placeholder for order book data</p>
-      <p>Buy/Sell orders would go here</p>
-    </div>
-    <div class="bottom-panels">
-      <div class="panel">
-        <div class="tab-bar">
-          <div class="tab active">Transactions</div>
-          <div class="tab">My Holdings</div>
-          <div class="tab">Top Traders</div>
-          <div class="tab">Holders</div>
-          <div class="tab">Bubble Maps</div>
-          <div class="tab">Orders</div>
-          <div class="tab">Dev Token</div>
-        </div>
-        <div class="panel-content">Placeholder for transactions data</div>
+
+    <div class="sidebar">
+      <div id="statusBadge" class="status-badge">Loading...</div>
+      <div id="actionAdvice">What you should do right now: Loading...</div>
+      <h3>Live Prices & Charts</h3>
+      <div id="prices"><div class="loading">Loading live prices...</div></div>
+      <div class="collapsible-section">
+        <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Bottom Calls (click to expand)</div>
+        <div id="previousBottoms" class="collapsible-content"><strong>Loading...</strong></div>
+      </div>
+      <div class="collapsible-section">
+        <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Top Calls (click to expand)</div>
+        <div id="previousTops" class="collapsible-content"><strong>Loading...</strong></div>
       </div>
     </div>
   </div>
@@ -355,7 +327,7 @@
     }
     updatePreviousCalls();
 
-    // === ALERTS & ACTION ADVICE ===
+    // === ALERTS & SELL ADVICE ===
     const currentIndex = predictorIndex[predictorIndex.length - 10];
     const alertBox = document.getElementById('alertBox');
     const actionAdvice = document.getElementById('actionAdvice');
@@ -385,7 +357,7 @@
     } else if (currentIndex > 80) {
       msg = 'Sell Alert: Euphoria building – start selling.';
       actionMsg = 'What you should do right now: You should be 50–80% out now.';
-      badge = '🟠 START SELLING NOW';
+      badge = '🟠 START SELLING';
       badgeColor = '#ff9800';
       saveCall('Top Warning', currentIndex);
     }
