--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@1.2.0"></script> <!-- Added for crosshair -->
   <style>
     body { 
       font-family: system-ui, -apple-system, sans-serif; 
@@ -65,6 +64,7 @@
       text-align: center; 
       font-weight: 700; 
       box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
+      transition: all 0.3s ease; 
     }
     .price-item { 
       margin: 20px 0; 
@@ -89,14 +89,15 @@
     #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
     #confidenceGauge { width: 200px; height: 200px; margin: 30px auto; }
     .phase-bar { height: 40px; width: 100%; margin: 0 0 20px 0; border-radius: 12px; overflow: hidden; display: flex; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
-    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
+    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; transition: all 0.3s; }
+    .phase-segment.current { box-shadow: inset 0 0 20px rgba(255,255,255,0.3); }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; } }
   </style>
 </head>
 <body>
   <h1 class="main-title">Flow Cycle Index Dashboard</h1>
-  <p class="subtitle">One clean line tracks market flows — from bottoms to blow-offs</p>
+  <p class="subtitle">Track money flows, phases, and signals in one clean view — from bottoms to blow-offs</p>
 
   <div class="container">
     <div class="chart-area">
@@ -124,13 +125,14 @@
   <div id="predictionAccuracy">Prediction vs Live: Updating...</div>
 
   <script>
+    // === MAIN CHART ===
     const ctx = document.getElementById('myChart').getContext('2d');
 
     const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
     const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
     const predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
 
-    const chart = new Chart(ctx, {
+    new Chart(ctx, {
       type: 'line',
       data: {
         labels: labels,
@@ -142,37 +144,20 @@
       options: {
         responsive: true,
         maintainAspectRatio: false,
-        scales: {
-          x: { 
-            type: 'time', 
-            time: { unit: 'month' }, 
-            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 },
-            title: { display: true, text: 'Time' }
-          },
-          y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
+        scales: { 
+          y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index (Low = Buy, High = Sell)' } },
+          x: { type: 'time', time: { unit: 'month' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 } }
         },
         plugins: {
           zoom: {
             zoom: {
-              wheel: { enabled: false }, // Disabled wheel zoom
+              wheel: { enabled: true },
               pinch: { enabled: true },
               mode: 'x'
             },
             pan: {
               enabled: true,
               mode: 'x'
-            }
-          },
-          crosshair: {
-            line: {
-              color: '#ffffff33',
-              width: 1
-            },
-            sync: {
-              enabled: true
-            },
-            zoom: {
-              enabled: false
             }
           },
           annotation: {
@@ -184,8 +169,6 @@
           },
           tooltip: {
             enabled: true,
-            mode: 'index',
-            intersect: false,
             callbacks: {
               label: function(tooltipItem) {
                 const value = tooltipItem.raw;
