--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
       text-align: center; 
       font-weight: 700; 
       box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
-      transition: all 0.3s ease; 
     }
     .price-item { 
       margin: 20px 0; 
@@ -92,7 +91,10 @@
     .phase-bar { height: 40px; width: 100%; margin: 0 0 20px 0; border-radius: 12px; overflow: hidden; display: flex; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
     .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
-    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; } .chart-area { height: 500px; } .sidebar { max-height: none; } }
+    .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; margin: 10px 0; }
+    .collapsible-content { display: none; padding: 10px; }
+    .collapsible-section.open .collapsible-content { display: block; }
+    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
 <body>
@@ -116,8 +118,14 @@
       <div id="actionAdvice">What you should do right now: Loading...</div>
       <h3>Live Prices & Charts</h3>
       <div id="prices"><div class="loading">Loading live prices...</div></div>
-      <div id="previousBottoms"><strong>Previous Bottom Calls:</strong> Loading...</div>
-      <div id="previousTops"><strong>Previous Top Calls:</strong> Loading...</div>
+      <div class="collapsible-section">
+        <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Bottom Calls (click to expand)</div>
+        <div id="previousBottoms" class="collapsible-content"><strong>Loading...</strong></div>
+      </div>
+      <div class="collapsible-section">
+        <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Top Calls (click to expand)</div>
+        <div id="previousTops" class="collapsible-content"><strong>Loading...</strong></div>
+      </div>
     </div>
   </div>
 
@@ -131,22 +139,9 @@
 
     const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
     const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
+    const predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
 
-    // Dynamic prediction (adjusts based on recent historical movement)
-    let predictionData = [];
-    if (predictorIndex.length > 5) {
-      const recent = predictorIndex.slice(-5).filter(v => v !== null); // Last 5 historical values
-      let last = recent[recent.length - 1];
-      for (let i = 0; i < 18; i++) { // 2 years (24 months, but monthly steps)
-        last = last * (1 + (Math.random() * 0.2 - 0.1)); // Random walk simulation for example (replace with real forecast logic)
-        last = Math.min(100, Math.max(0, last));
-        predictionData.push(last);
-      }
-    } else {
-      predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
-    }
-
-    new Chart(ctx, {
+    const chart = new Chart(ctx, {
       type: 'line',
       data: {
         labels: labels,
@@ -158,20 +153,25 @@
       options: {
         responsive: true,
         maintainAspectRatio: false,
-        scales: { 
-          y: { min: 0, max: 100, grid: { color: '#30363d' } }, 
-          x: { grid: { color: '#30363d' } }
+        scales: {
+          x: { 
+            type: 'time', 
+            time: { unit: 'month' }, 
+            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 },
+            title: { display: true, text: 'Time' }
+          },
+          y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
           zoom: {
             zoom: {
-              wheel: { enabled: true, modifierKey: 'ctrl' },
+              wheel: { enabled: true },
               pinch: { enabled: true },
-              mode: 'xy' // Allow y-axis zoom too
+              mode: 'xy'
             },
             pan: {
               enabled: true,
-              mode: 'xy' // Allow y-axis pan too
+              mode: 'xy'
             }
           },
           crosshair: {
@@ -214,7 +214,19 @@
       }
     });
 
-    // === LIVE PRICES ===
+    // Time scale buttons
+    document.querySelectorAll('.time-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        document.querySelectorAll('.time-btn').forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+        const scale = btn.dataset.scale;
+        chart.options.scales.x.time.unit = scale === '15m' ? 'minute' : scale === '1h' ? 'hour' : scale === '4h' ? 'hour' : scale === 'day' ? 'day' : scale === 'month' ? 'month' : 'year';
+        chart.options.scales.x.ticks.maxTicksLimit = scale === '15m' ? 20 : scale === '1h' ? 24 : scale === '4h' ? 12 : scale === 'day' ? 30 : scale === 'month' ? 12 : 5;
+        chart.update();
+      });
+    });
+
+    // Live prices fetch
     async function fetchLiveData() {
       try {
         const cgRes = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h');
@@ -275,13 +287,13 @@
     // === ALERTS & SELL ADVICE ===
     const currentIndex = predictorIndex[predictorIndex.length - 10];
     const alertBox = document.getElementById('alertBox');
-    const sellAdvice = document.getElementById('sellAdvice');
+    const actionAdvice = document.getElementById('actionAdvice');
     const statusBadge = document.getElementById('statusBadge');
     const predictionsBox = document.getElementById('predictionsBox');
     const predictionAccuracy = document.getElementById('predictionAccuracy');
 
     let msg = 'Current: Neutral flow.';
-    let sellMsg = 'Sell Advice: Hold or buy dips.';
+    let actionMsg = 'What you should do right now: Hold or buy dips.';
     let badge = '🟡 WATCHING';
     let badgeColor = '#ffeb3b';
     let predictions = 'Predicted Top: April–July 2026 | Bottom: August–November 2026';
@@ -289,19 +301,19 @@
 
     if (currentIndex < 30) {
       msg = 'Bottom Alert: Fear low – like Nov 2025 – buy time!';
-      sellMsg = 'Sell Advice: Too early – consider buying.';
+      actionMsg = 'What you should do right now: Consider buying.';
       badge = '🟢 BUY ZONE';
       badgeColor = '#4caf50';
       saveCall('Bottom', currentIndex);
     } else if (currentIndex > 90) {
       msg = 'Heavy Sell Alert: Euphoria peak – full sell now!';
-      sellMsg = 'Sell Advice: You should be 100% out now.';
+      actionMsg = 'What you should do right now: You should be 100% out now.';
       badge = '🔴 FULL SELL';
       badgeColor = '#f44336';
       saveCall('Top', currentIndex);
     } else if (currentIndex > 80) {
       msg = 'Sell Alert: Euphoria building – start selling.';
-      sellMsg = 'Sell Advice: You should be 50–80% out now.';
+      actionMsg = 'What you should do right now: You should be 50–80% out now.';
       badge = '🟠 START SELLING';
       badgeColor = '#ff9800';
       saveCall('Top Warning', currentIndex);
@@ -310,8 +322,8 @@
     alertBox.innerHTML = `<strong>Flow Cycle Alert:</strong> ${msg}`;
     alertBox.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
 
-    sellAdvice.innerHTML = sellMsg;
-    sellAdvice.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
+    actionAdvice.innerHTML = actionMsg;
+    actionAdvice.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
 
     statusBadge.innerHTML = badge;
     statusBadge.style.background = badgeColor;
